bitfields/tests/compile_error_cases/bitfield_padding_field_with_access.rs
#![feature(const_trait_impl)]
#![feature(const_try)]
#![feature(const_default)]

use bitfields::bitfield;

#[bitfield(u8)]
struct Bitfield {
    #[bits(access = ro)]
    _padding: u8,
}

fn main() {}
